Implements authentication
