# routes/api.php
@@ -14,11 +14,14 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-//Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-//    return $request->user();
-//});
-
 
 Route::post('user/register', 'Auth\RegisterController@register')->name('api.auth.register');
-Route::post('user/login', 'Auth\LoginController@login');
-//Route::post('user/logout', 'Auth\LoginController@logout')->middleware('auth:sanctum');
+Route::post('user/login', 'Auth\LoginController@apiLogin')->name('api.auth.login');
+
+Route::middleware('auth:sanctum')->group(function () {
+    Route::post('user/logout', 'Auth\LoginController@apiLogout')->name('api.auth.logout');
+
+    Route::get('/user', function (Request $request) {
+        return $request->user();
+    });
+});
